[gd_scene load_steps=5 format=3 uid="uid://cpw7w5wfirwjo"]

[ext_resource type="Script" path="res://level_select_1.gd" id="1_088e6"]

[sub_resource type="LabelSettings" id="LabelSettings_2iuvf"]
font_size = 27
font_color = Color(0.301961, 0.301961, 0.301961, 1)
outline_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_f1co2"]
font_size = 27
font_color = Color(0.301961, 0.301961, 0.301961, 1)
outline_size = 3

[sub_resource type="LabelSettings" id="LabelSettings_4al1i"]
font_size = 35
font_color = Color(0.301961, 0.301961, 0.301961, 1)
outline_size = 4

[node name="level_select_1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_088e6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -50.0
offset_top = 1.0
offset_right = 1284.0
offset_bottom = 711.0
color = Color(0.831373, 0.831373, 0.831373, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = -82.0
offset_right = 465.0
offset_bottom = 725.0
color = Color(0.6, 0.6, 0.6, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -435.0
offset_top = -114.0
offset_right = -177.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Tutorial_1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial 1"

[node name="Level_1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 1"

[node name="Level_2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 2"

[node name="Level_3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Level 3"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="ColorRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 538.0
offset_top = -73.0
offset_right = 1340.0
offset_bottom = 734.0
color = Color(0.6, 0.6, 0.6, 1)

[node name="ColorRect5" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 597.0
offset_top = 287.0
offset_right = 1071.0
offset_bottom = 617.0
color = Color(0.831373, 0.831373, 0.831373, 1)

[node name="image_desc" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 597.0
offset_top = 34.0
offset_right = 1071.0
offset_bottom = 244.0
color = Color(0.831373, 0.831373, 0.831373, 1)

[node name="Coin_Stats" type="Label" parent="."]
layout_mode = 0
offset_left = 608.0
offset_top = 128.0
offset_right = 792.0
offset_bottom = 191.0
text = "Level:"
label_settings = SubResource("LabelSettings_2iuvf")

[node name="Time_Stats" type="Label" parent="."]
layout_mode = 0
offset_left = 608.0
offset_top = 192.0
offset_right = 687.0
offset_bottom = 232.0
text = "Best time: "
label_settings = SubResource("LabelSettings_f1co2")

[node name="lvl_title" type="Label" parent="."]
layout_mode = 0
offset_left = 729.0
offset_top = 54.0
offset_right = 917.0
offset_bottom = 115.0
text = "Text Title"
label_settings = SubResource("LabelSettings_4al1i")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 702.0
offset_top = 406.0
offset_right = 982.0
offset_bottom = 432.0
text = "screenshot of the level here, prevew"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 24.0
offset_right = 144.0
offset_bottom = 47.0
text = "total coints:"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Tutorial_1" to="." method="_on_tutorial_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
